# Operating-Systems

./: .gitignore  CMakeLists.txt  Makefile  Makefile_example  README  Thread.cpp  Thread.h  ex1.tar  ex1_answers_for_readme  main.cpp  osm.cpp  simpletest.cpp  uthreads.cpp
ex1/: Makefile  README  test.txt
ex2/: CMakeLists.txt  Makefile  README  Thread.cpp  Thread.h  main.cpp  timer_demo.c  uthreads.cpp  uthreads.h
ex2/ex2sanity/: diff.txt  ex2.tar  output.txt  test.cpp  uthreads.h
ex3/: Makefile  MapReduceFramework.cpp  MapReduceFramework.h  README  Search.cpp  defs1.h
ex4/: Block.cpp  Block.h  BlockStack.cpp  BlockStack.h  CMakeLists.txt  CachFS.cpp  CacheFS.cpp  CacheFS.h  Makefile  README  RunTests  TEST.cpp  main.cpp
ex5/: Makefile  README  common.h  tempClient3.cpp  whatsappClient.cpp  whatsappClient.h  whatsappServer.cpp  whatsappServer.h
